# Classpaper-v4

./: .gitignore  BACKEND_API.md  Cargo.toml  FRONTEND_API.md  README.md  RELEASE_GUIDE.md  app.rc  build.rs  config.toml
.github/workflows/: release.yml
alcro-patched/: Cargo.toml
alcro-patched/src/: chrome.rs  lib.rs
alcro-patched/src/chrome/: devtools.rs
alcro-patched/src/chrome/os/: process_windows.rs
docs/: error_handling_summary.md  error_test.md
res/: README.md  index.html  settings.html
res/config/: config.js  messages.js
res/css/: theme.css
res/js/: class.js  core.js  main.js
src/: main.rs  monet.rs  winapi.rs
