[package]
name = "classpaper"
version = "0.1.0"
edition = "2021"
authors = ["E7G"]
description = "A desktop wallpaper application using web technologies"

[dependencies]
once_cell = "1.18"
tray-item = "0.10.0" 
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
simplelog = "0.12"
rand = "0.8"
url = "2.5"
winapi = { version = "0.3.9", features = [
    "winuser",
    "dwmapi",
    "shellapi",
    "libloaderapi",
    "errhandlingapi",
    "processthreadsapi",
    "handleapi",
    "synchapi",
    "winbase",
]}
alcro = { path = "alcro-patched", version = "0.5.4" }
serde_json = "1.0.140"
percent-encoding = "2.3"
ctrlc = "3.4"

[build-dependencies]
embed-resource = "3.0.5"

[package.metadata.winres]
OriginalFilename = "classpaper.exe"
LegalCopyright = "Copyright © 2025"
FileDescription = "ClassPaper Desktop Wallpaper"
ProductName = "ClassPaper"
ProductVersion = "0.1.0" 
