[package]
name = "classpaper"
version = "0.1.0"
edition = "2021"
authors = ["E7G"]
description = "A desktop wallpaper application using web technologies"

[dependencies]
once_cell = "1.18"
tray-item = "0.10.0" 
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
simplelog = "0.12"
rand = "0.8"
url = "2.5"
chrono = "0.4"
winapi = { version = "0.3.9", features = [
    "winuser",
    "dwmapi",
    "shellapi",
    "libloaderapi",
    "errhandlingapi",
    "processthreadsapi",
    "handleapi",
    "synchapi",
    "winbase",
    "sysinfoapi",
    "psapi",
    "wingdi",
    "winnt",
    "uxtheme",
]}
alcro = { path = "alcro-patched", version = "0.5.4" }
serde_json = "1.0.140"
percent-encoding = "2.3"
ctrlc = "3.4"

[build-dependencies]
embed-resource = "3.0.5"
chrono = "0.4"

[package.metadata.winres]
OriginalFilename = "classpaper.exe"
LegalCopyright = "Copyright © 2025"
FileDescription = "ClassPaper Desktop Wallpaper"
ProductName = "ClassPaper"
ProductVersion = "0.1.0" 

# use yy-thunks and vc-ltl5 on Windows 7
[target.'cfg(target_family = "windows")'.dependencies]
oldwin-targets = { version = "0.1.1", default-features = false, features = [
  "win7",
  "yy-thunks",
  "vc-ltl5",
] }

[target.'cfg(target_family = "windows")'.build-dependencies]
# use yy-thunks and vc-ltl5 on Windows 7
oldwin = { version = "0.1.1", default-features = false, features = [
  "win7",
  "yy-thunks",
  "vc-ltl5",
] }

